kubernetes/ckad/whoami/whoami-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoami
spec:
  rules:
  - host: whoami.fritz.box
    http:
      paths:
      - path: /
        backend:
          serviceName: whoami
          servicePort: 80
